--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Suivi des matchs européens</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Suivi des Événements Sportifs</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .card {
+      border-radius: 20px;
+      transition: box-shadow 0.3s ease;
+    }
+    .card:hover {
+      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
+    }
     .team-logo {
       width: 30px;
       height: 30px;
@@ -16,192 +26,141 @@
       font-size: 1.2rem;
       margin: 0 10px;
     }
+    .badge-live {
+      background-color: #dc3545;
+    }
   </style>
 </head>
-<body class="bg-light">
-  <div class="container py-4">
-    <h1 class="text-center mb-4">⚽ Matchs européens à venir</h1>
+<body>
+<div class="container py-4">
+  <h1 class="text-center mb-4">🏆 Suivi des Événements Sportifs</h1>
 
-    <!-- Filtres -->
-    <div class="row mb-4">
-      <div class="col-md-5">
-        <label for="leagueSelect" class="form-label">🏆 Choisir une ligue</label>
-        <select id="leagueSelect" class="form-select">
-          <option value="all">Toutes</option>
-          <option value="Ligue 1">Ligue 1</option>
-          <option value="Premier League">Premier League</option>
-          <option value="Serie A">Serie A</option>
-          <option value="Bundesliga">Bundesliga</option>
-          <option value="La Liga">La Liga</option>
-          <option value="Eredivisie">Eredivisie</option>
-        </select>
-      </div>
-      <div class="col-md-5">
-        <label for="daySelect" class="form-label">📅 Sélectionner le jour</label>
-        <select id="daySelect" class="form-select">
-          <option value="0">Aujourd’hui</option>
-          <option value="1">Demain</option>
-          <option value="2">Après-demain</option>
-        </select>
-      </div>
-      <div class="col-md-2 d-flex align-items-end">
-        <button class="btn btn-outline-primary w-100" id="weekBtn">🔁 Semaine</button>
-      </div>
+  <!-- Filtres -->
+  <div class="row g-3 mb-4">
+    <div class="col-md-4">
+      <label for="sportSelect" class="form-label">🏅 Choisir un sport</label>
+      <select id="sportSelect" class="form-select">
+        <option value="all">Tous</option>
+        <option value="football">⚽ Football</option>
+        <option value="basketball">🏀 Basketball</option>
+        <option value="tennis">🎾 Tennis</option>
+      </select>
     </div>
-
-    <div id="match-list" class="row g-4"></div>
-    <p class="text-center mt-4 text-muted" id="refresh-note">🔄 Mise à jour auto toutes les 60 secondes</p>
+    <div class="col-md-4">
+      <label for="leagueSelect" class="form-label">🏆 Choisir une ligue</label>
+      <select id="leagueSelect" class="form-select">
+        <option value="all">Toutes</option>
+        <option value="Ligue 1">Ligue 1</option>
+        <option value="Premier League">Premier League</option>
+        <option value="Serie A">Serie A</option>
+        <option value="Bundesliga">Bundesliga</option>
+        <option value="NBA">NBA</option>
+        <option value="Roland Garros">Roland Garros</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <label for="daySelect" class="form-label">📅 Sélectionner le jour</label>
+      <select id="daySelect" class="form-select">
+        <option value="0">Aujourd’hui</option>
+        <option value="1">Demain</option>
+        <option value="2">Après-demain</option>
+      </select>
+    </div>
   </div>
 
-  <script>
-    const baseDate = new Date();
-    const getDateWithOffset = (offset) => {
-      const date = new Date(baseDate);
-      date.setDate(date.getDate() + offset);
-      return date.toISOString().split('T')[0];
-    };
+  <div id="match-list" class="row g-4"></div>
+</div>
 
-    // 🗂️ Données de matchs avec chaînes TV
-    const matches = [
-      {
-        date: getDateWithOffset(0),
-        competition: "Ligue 1",
-        time: "20:45",
-        home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null },
-        away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null },
-        channel: { name: "Amazon Prime Video", url: "https://www.primevideo.com", isPaid: true }
-      },
-      {
-        date: getDateWithOffset(1),
-        competition: "Premier League",
-        time: "18:30",
-        home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg", score: null },
-        away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg", score: null },
-        channel: { name: "Canal+ Sport", url: "https://www.canalplus.com", isPaid: true }
-      },
-      {
-        date: getDateWithOffset(2),
-        competition: "Serie A",
-        time: "21:00",
-        home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg", score: null },
-        away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg", score: null },
-        channel: { name: "beIN Sports", url: "https://www.beinsports.com", isPaid: true }
-      },
-      {
-        date: getDateWithOffset(3),
-        competition: "Bundesliga",
-        time: "19:00",
-        home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg", score: null },
-        away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: null },
-        channel: { name: "OneFootball", url: "https://www.onefootball.com", isPaid: false }
-      },
-      {
-        date: getDateWithOffset(4),
-        competition: "La Liga",
-        time: "20:30",
-        home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg", score: null },
-        away: { name: "Barcelona", logo: "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg", score: null },
-        channel: { name: "DAZN", url: "https://www.dazn.com", isPaid: true }
-      },
-      {
-        date: getDateWithOffset(5),
-        competition: "Eredivisie",
-        time: "16:00",
-        home: { name: "Ajax", logo: "https://upload.wikimedia.org/wikipedia/en/7/79/Ajax_Amsterdam.svg", score: null },
-        away: { name: "PSV", logo: "https://upload.wikimedia.org/wikipedia/en/2/21/PSV_Eindhoven.svg", score: null },
-        channel: { name: "ESPN NL", url: "https://www.espn.nl", isPaid: false }
-      }
-    ];
+<script>
+const baseDate = new Date();
+const getDateWithOffset = (offset) => {
+  const date = new Date(baseDate);
+  date.setDate(date.getDate() + offset);
+  return date.toISOString().split('T')[0];
+};
 
-    const leagueSelect = document.getElementById('leagueSelect');
-    const daySelect = document.getElementById('daySelect');
-    const weekBtn = document.getElementById('weekBtn');
-    const matchList = document.getElementById('match-list');
-    let showWeek = false;
+const matches = [
+  { sport: "football", competition: "Ligue 1", date: getDateWithOffset(0), time: "20:45", home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg" }, away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg" } },
+  { sport: "football", competition: "Bundesliga", date: getDateWithOffset(0), time: "19:00", home: { name: "Bayern", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_M%C3%BCnchen_logo_%282017%29.svg" }, away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" } },
+  { sport: "basketball", competition: "NBA", date: getDateWithOffset(1), time: "02:00", home: { name: "Lakers", logo: "https://upload.wikimedia.org/wikipedia/en/3/3c/Los_Angeles_Lakers_logo.svg" }, away: { name: "Celtics", logo: "https://upload.wikimedia.org/wikipedia/en/8/8f/Boston_Celtics.svg" } },
+  { sport: "tennis", competition: "Roland Garros", date: getDateWithOffset(2), time: "15:00", home: { name: "Nadal", logo: "https://upload.wikimedia.org/wikipedia/commons/b/b9/Rafael_Nadal_Logo.svg" }, away: { name: "Djokovic", logo: "https://upload.wikimedia.org/wikipedia/commons/f/f7/Novak_Djokovic_logo.svg" } }
+];
 
-    function getMatchStatus(dateStr, timeStr) {
-      const matchStart = new Date(`${dateStr}T${timeStr}:00`);
-      const matchEnd = new Date(matchStart.getTime() + 2 * 60 * 60 * 1000);
-      const now = new Date();
+const sportSelect = document.getElementById('sportSelect');
+const leagueSelect = document.getElementById('leagueSelect');
+const daySelect = document.getElementById('daySelect');
+const matchList = document.getElementById('match-list');
 
-      if (now >= matchEnd) return { text: "✅ Terminé", class: "text-muted" };
-      if (now >= matchStart && now <= matchEnd) return { text: "🔴 En direct", class: "text-danger fw-bold" };
+function getCountdownText(dateStr, timeStr) {
+  const matchDate = new Date(`${dateStr}T${timeStr}:00`);
+  const now = new Date();
+  const diff = matchDate - now;
 
-      const diffMin = Math.round((matchStart - now) / 60000);
-      return { text: `⏳ Débute dans ${diffMin} min`, class: "text-primary fw-semibold" };
-    }
+  if (diff < 0 && diff > -7200000) return '<span class="badge text-bg-danger">🔴 En cours</span>';
+  if (diff <= -7200000) return "Terminé";
 
-    function renderMatches() {
-      const selectedLeague = leagueSelect.value;
-      const selectedDay = parseInt(daySelect.value);
-      const targetDate = getDateWithOffset(selectedDay);
+  const hours = Math.floor(diff / 3600000);
+  const minutes = Math.floor((diff % 3600000) / 60000);
+  return `⏳ Débute dans ${hours}h ${minutes}min`;
+}
 
-      let filtered = matches.filter(m =>
-        (selectedLeague === "all" || m.competition === selectedLeague)
-      );
+function renderMatches() {
+  const selectedSport = sportSelect.value;
+  const selectedLeague = leagueSelect.value;
+  const selectedDay = parseInt(daySelect.value);
+  const targetDate = getDateWithOffset(selectedDay);
 
-      if (!showWeek) {
-        filtered = filtered.filter(m => m.date === targetDate);
-      }
+  let filtered = matches.filter(m =>
+    (selectedSport === "all" || m.sport === selectedSport) &&
+    (selectedLeague === "all" || m.competition === selectedLeague) &&
+    m.date === targetDate
+  );
 
-      matchList.innerHTML = "";
-      if (filtered.length === 0) {
-        matchList.innerHTML = `<p class="text-center">Aucun match trouvé.</p>`;
-        return;
-      }
+  matchList.innerHTML = "";
+  if (filtered.length === 0) {
+    matchList.innerHTML = `<p class="text-center text-muted">Aucun événement trouvé.</p>`;
+    return;
+  }
 
-      filtered.forEach(match => {
-        const scoreDisplay = match.home.score !== null ? `${match.home.score} - ${match.away.score}` : "vs";
-        const status = getMatchStatus(match.date, match.time);
-        const channelLink = match.channel
-          ? `<a href="${match.channel.url}" target="_blank" class="${match.channel.isPaid ? 'text-danger' : 'text-success'} text-decoration-none">
-              📺 ${match.channel.name}${match.channel.isPaid ? ' 🔒' : ''}
-            </a>` : "";
+  filtered.forEach(match => {
+    const countdown = getCountdownText(match.date, match.time);
 
-        const div = document.createElement("div");
-        div.className = "col-md-6";
-        div.innerHTML = `
-          <div class="card p-3 shadow-sm">
-            <div class="d-flex justify-content-between align-items-center mb-2">
-              <h6 class="text-muted mb-0">${match.competition} — ${match.date}</h6>
-              <span class="${status.class}">${status.text}</span>
-            </div>
-            <div class="d-flex align-items-center justify-content-between">
-              <div class="d-flex align-items-center">
-                <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
-                <span>${match.home.name}</span>
-              </div>
-              <div class="vs">${scoreDisplay}</div>
-              <div class="d-flex align-items-center">
-                <span>${match.away.name}</span>
-                <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
-              </div>
-            </div>
-            <p class="mb-0 mt-2">Heure : ${match.time}</p>
-            <p>${channelLink}</p>
+    const div = document.createElement("div");
+    div.className = "col-md-6";
+    div.innerHTML = `
+      <div class="card p-3 shadow-sm">
+        <div class="d-flex justify-content-between align-items-center">
+          <span class="text-muted">${match.competition} — ${match.date}</span>
+          ${countdown.includes("🔴") ? countdown : ''}
+        </div>
+        <div class="d-flex align-items-center justify-content-between mt-2">
+          <div class="d-flex align-items-center">
+            <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
+            <span>${match.home.name}</span>
           </div>
-        `;
-        matchList.appendChild(div);
-      });
-    }
+          <div class="vs">vs</div>
+          <div class="d-flex align-items-center">
+            <span>${match.away.name}</span>
+            <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
+          </div>
+        </div>
+        <p class="mb-0 mt-2">🕒 ${match.time}</p>
+        <p class="text-primary">${!countdown.includes("🔴") ? countdown : ''}</p>
+      </div>
+    `;
+    matchList.appendChild(div);
+  });
+}
 
-    leagueSelect.addEventListener("change", renderMatches);
-    daySelect.addEventListener("change", () => {
-      showWeek = false;
-      renderMatches();
-    });
+sportSelect.addEventListener("change", renderMatches);
+leagueSelect.addEventListener("change", renderMatches);
+daySelect.addEventListener("change", renderMatches);
 
-    weekBtn.addEventListener("click", () => {
-      showWeek = true;
-      renderMatches();
-    });
-
-    setInterval(renderMatches, 60000); // Mise à jour automatique
-
-    renderMatches();
-  </script>
+renderMatches();
+</script>
 </body>
 </html>
+
 
 
 
