--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <title>Dashboard Multisport</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Suivi des Événements Sportifs</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .card {
-      border-radius: 20px;
-      transition: box-shadow 0.3s ease;
-    }
-    .card:hover {
-      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
-    }
     .team-logo {
       width: 30px;
       height: 30px;
@@ -26,140 +16,158 @@
       font-size: 1.2rem;
       margin: 0 10px;
     }
-    .badge-live {
-      background-color: #dc3545;
+    .live-indicator {
+      color: red;
+      font-weight: bold;
+      margin-left: 10px;
     }
   </style>
 </head>
-<body>
-<div class="container py-4">
-  <h1 class="text-center mb-4">🏆 Suivi des Événements Sportifs</h1>
+<body class="bg-light">
+  <div class="container py-4">
+    <h1 class="text-center mb-4">🏟️ Dashboard Multisport</h1>
 
-  <!-- Filtres -->
-  <div class="row g-3 mb-4">
-    <div class="col-md-4">
-      <label for="sportSelect" class="form-label">🏅 Choisir un sport</label>
-      <select id="sportSelect" class="form-select">
-        <option value="all">Tous</option>
-        <option value="football">⚽ Football</option>
-        <option value="basketball">🏀 Basketball</option>
-        <option value="tennis">🎾 Tennis</option>
-      </select>
+    <!-- Filtres -->
+    <div class="row mb-4">
+      <div class="col-md-4">
+        <label for="sportSelect" class="form-label">🏅 Sport</label>
+        <select id="sportSelect" class="form-select">
+          <option value="all">Tous</option>
+          <option value="Football">Football</option>
+          <option value="Basketball">Basketball</option>
+          <option value="Tennis">Tennis</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label for="leagueSelect" class="form-label">🏆 Ligue</label>
+        <select id="leagueSelect" class="form-select">
+          <option value="all">Toutes</option>
+          <option value="Ligue 1">Ligue 1</option>
+          <option value="Premier League">Premier League</option>
+          <option value="Serie A">Serie A</option>
+          <option value="Bundesliga">Bundesliga</option>
+          <option value="NBA">NBA</option>
+          <option value="ATP">ATP</option>
+        </select>
+      </div>
+      <div class="col-md-2">
+        <label for="daySelect" class="form-label">📅 Jour</label>
+        <select id="daySelect" class="form-select">
+          <option value="0">Aujourd’hui</option>
+          <option value="1">Demain</option>
+          <option value="2">Après-demain</option>
+        </select>
+      </div>
+      <div class="col-md-2 d-flex align-items-end">
+        <button class="btn btn-outline-primary w-100" id="weekBtn">🔁 Semaine</button>
+      </div>
     </div>
-    <div class="col-md-4">
-      <label for="leagueSelect" class="form-label">🏆 Choisir une ligue</label>
-      <select id="leagueSelect" class="form-select">
-        <option value="all">Toutes</option>
-        <option value="Ligue 1">Ligue 1</option>
-        <option value="Premier League">Premier League</option>
-        <option value="Serie A">Serie A</option>
-        <option value="Bundesliga">Bundesliga</option>
-        <option value="NBA">NBA</option>
-        <option value="Roland Garros">Roland Garros</option>
-      </select>
-    </div>
-    <div class="col-md-4">
-      <label for="daySelect" class="form-label">📅 Sélectionner le jour</label>
-      <select id="daySelect" class="form-select">
-        <option value="0">Aujourd’hui</option>
-        <option value="1">Demain</option>
-        <option value="2">Après-demain</option>
-      </select>
-    </div>
+
+    <div id="match-list" class="row g-4"></div>
+    <p class="text-center mt-4 text-muted" id="refresh-note">🔄 Mise à jour auto toutes les 60 secondes</p>
   </div>
 
-  <div id="match-list" class="row g-4"></div>
-</div>
+  <script>
+    const baseDate = new Date();
+    const getDateWithOffset = (offset) => {
+      const date = new Date(baseDate);
+      date.setDate(date.getDate() + offset);
+      return date.toISOString().split('T')[0];
+    };
 
-<script>
-const baseDate = new Date();
-const getDateWithOffset = (offset) => {
-  const date = new Date(baseDate);
-  date.setDate(date.getDate() + offset);
-  return date.toISOString().split('T')[0];
-};
+    const matches = [
+      { sport: "Football", date: getDateWithOffset(0), competition: "Ligue 1", time: "20:45", channel: { name: "Canal+", paid: true, url: "https://www.canalplus.com" }, status: "À venir", home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null }, away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null }},
+      { sport: "Football", date: getDateWithOffset(3), competition: "Bundesliga", time: "19:00", channel: { name: "BeIN Sports", paid: true, url: "https://www.beinsports.com" }, status: "Live", home: { name: "Bayern", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg", score: 1 }, away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: 0 }},
+      { sport: "Basketball", date: getDateWithOffset(0), competition: "NBA", time: "02:00", channel: { name: "NBA TV", paid: false, url: "https://www.nba.com" }, status: "À venir", home: { name: "Lakers", logo: "https://upload.wikimedia.org/wikipedia/commons/3/3c/Los_Angeles_Lakers_logo.svg", score: null }, away: { name: "Warriors", logo: "https://upload.wikimedia.org/wikipedia/en/0/01/Golden_State_Warriors_logo.svg", score: null }},
+      { sport: "Tennis", date: getDateWithOffset(1), competition: "ATP", time: "14:00", channel: { name: "Eurosport", paid: true, url: "https://www.eurosport.fr" }, status: "À venir", home: { name: "Nadal", logo: "https://upload.wikimedia.org/wikipedia/commons/2/2e/Rafael_Nadal_2011_2.jpg", score: null }, away: { name: "Djokovic", logo: "https://upload.wikimedia.org/wikipedia/commons/f/f7/Novak_Djokovic_in_2019.jpg", score: null }}
+    ];
 
-const matches = [
-  { sport: "football", competition: "Ligue 1", date: getDateWithOffset(0), time: "20:45", home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg" }, away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg" } },
-  { sport: "football", competition: "Bundesliga", date: getDateWithOffset(0), time: "19:00", home: { name: "Bayern", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_M%C3%BCnchen_logo_%282017%29.svg" }, away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" } },
-  { sport: "basketball", competition: "NBA", date: getDateWithOffset(1), time: "02:00", home: { name: "Lakers", logo: "https://upload.wikimedia.org/wikipedia/en/3/3c/Los_Angeles_Lakers_logo.svg" }, away: { name: "Celtics", logo: "https://upload.wikimedia.org/wikipedia/en/8/8f/Boston_Celtics.svg" } },
-  { sport: "tennis", competition: "Roland Garros", date: getDateWithOffset(2), time: "15:00", home: { name: "Nadal", logo: "https://upload.wikimedia.org/wikipedia/commons/b/b9/Rafael_Nadal_Logo.svg" }, away: { name: "Djokovic", logo: "https://upload.wikimedia.org/wikipedia/commons/f/f7/Novak_Djokovic_logo.svg" } }
-];
+    const leagueSelect = document.getElementById('leagueSelect');
+    const sportSelect = document.getElementById('sportSelect');
+    const daySelect = document.getElementById('daySelect');
+    const weekBtn = document.getElementById('weekBtn');
+    const matchList = document.getElementById('match-list');
 
-const sportSelect = document.getElementById('sportSelect');
-const leagueSelect = document.getElementById('leagueSelect');
-const daySelect = document.getElementById('daySelect');
-const matchList = document.getElementById('match-list');
+    let showWeek = false;
 
-function getCountdownText(dateStr, timeStr) {
-  const matchDate = new Date(`${dateStr}T${timeStr}:00`);
-  const now = new Date();
-  const diff = matchDate - now;
+    function getCountdownText(dateStr, timeStr) {
+      const matchDate = new Date(`${dateStr}T${timeStr}:00`);
+      const now = new Date();
+      const diff = matchDate - now;
+      if (diff <= 0) return '<span class="live-indicator">🔴 Match en cours</span>';
+      const minutes = Math.floor((diff / 1000 / 60) % 60);
+      const hours = Math.floor((diff / 1000 / 60 / 60));
+      return `Débute dans ${hours}h ${minutes}min`;
+    }
 
-  if (diff < 0 && diff > -7200000) return '<span class="badge text-bg-danger">🔴 En cours</span>';
-  if (diff <= -7200000) return "Terminé";
+    function renderMatches() {
+      const selectedSport = sportSelect.value;
+      const selectedLeague = leagueSelect.value;
+      const selectedDay = parseInt(daySelect.value);
+      const targetDate = getDateWithOffset(selectedDay);
 
-  const hours = Math.floor(diff / 3600000);
-  const minutes = Math.floor((diff % 3600000) / 60000);
-  return `⏳ Débute dans ${hours}h ${minutes}min`;
-}
+      let filtered = matches.filter(m =>
+        (selectedSport === "all" || m.sport === selectedSport) &&
+        (selectedLeague === "all" || m.competition === selectedLeague)
+      );
 
-function renderMatches() {
-  const selectedSport = sportSelect.value;
-  const selectedLeague = leagueSelect.value;
-  const selectedDay = parseInt(daySelect.value);
-  const targetDate = getDateWithOffset(selectedDay);
+      if (!showWeek) {
+        filtered = filtered.filter(m => m.date === targetDate);
+      }
 
-  let filtered = matches.filter(m =>
-    (selectedSport === "all" || m.sport === selectedSport) &&
-    (selectedLeague === "all" || m.competition === selectedLeague) &&
-    m.date === targetDate
-  );
+      matchList.innerHTML = "";
+      if (filtered.length === 0) {
+        matchList.innerHTML = `<p class="text-center">Aucun match trouvé.</p>`;
+        return;
+      }
 
-  matchList.innerHTML = "";
-  if (filtered.length === 0) {
-    matchList.innerHTML = `<p class="text-center text-muted">Aucun événement trouvé.</p>`;
-    return;
-  }
+      filtered.forEach(match => {
+        const scoreDisplay = match.home.score !== null ? `${match.home.score} - ${match.away.score}` : "vs";
+        const countdown = match.status === "Live" ? '<span class="live-indicator">🔴 En direct</span>' : getCountdownText(match.date, match.time);
+        const channelLink = match.channel.paid ? `<a href="${match.channel.url}" target="_blank" class="badge text-bg-danger">${match.channel.name} 🔗</a>` : `<a href="${match.channel.url}" target="_blank" class="badge text-bg-success">${match.channel.name}</a>`;
 
-  filtered.forEach(match => {
-    const countdown = getCountdownText(match.date, match.time);
-
-    const div = document.createElement("div");
-    div.className = "col-md-6";
-    div.innerHTML = `
-      <div class="card p-3 shadow-sm">
-        <div class="d-flex justify-content-between align-items-center">
-          <span class="text-muted">${match.competition} — ${match.date}</span>
-          ${countdown.includes("🔴") ? countdown : ''}
-        </div>
-        <div class="d-flex align-items-center justify-content-between mt-2">
-          <div class="d-flex align-items-center">
-            <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
-            <span>${match.home.name}</span>
+        const div = document.createElement("div");
+        div.className = "col-md-6";
+        div.innerHTML = `
+          <div class="card p-3 shadow-sm">
+            <h6 class="text-muted">${match.sport} — ${match.competition} — ${match.date}</h6>
+            <div class="d-flex align-items-center justify-content-between">
+              <div class="d-flex align-items-center">
+                <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
+                <span>${match.home.name}</span>
+              </div>
+              <div class="vs">${scoreDisplay}</div>
+              <div class="d-flex align-items-center">
+                <span>${match.away.name}</span>
+                <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
+              </div>
+            </div>
+            <p class="mb-0 mt-2">Heure : ${match.time}</p>
+            <p>${countdown}</p>
+            <p>📺 Diffusé sur : ${channelLink}</p>
           </div>
-          <div class="vs">vs</div>
-          <div class="d-flex align-items-center">
-            <span>${match.away.name}</span>
-            <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
-          </div>
-        </div>
-        <p class="mb-0 mt-2">🕒 ${match.time}</p>
-        <p class="text-primary">${!countdown.includes("🔴") ? countdown : ''}</p>
-      </div>
-    `;
-    matchList.appendChild(div);
-  });
-}
+        `;
+        matchList.appendChild(div);
+      });
+    }
 
-sportSelect.addEventListener("change", renderMatches);
-leagueSelect.addEventListener("change", renderMatches);
-daySelect.addEventListener("change", renderMatches);
+    leagueSelect.addEventListener("change", renderMatches);
+    sportSelect.addEventListener("change", renderMatches);
+    daySelect.addEventListener("change", () => {
+      showWeek = false;
+      renderMatches();
+    });
+    weekBtn.addEventListener("click", () => {
+      showWeek = true;
+      renderMatches();
+    });
 
-renderMatches();
-</script>
+    setInterval(renderMatches, 60000);
+    renderMatches();
+  </script>
 </body>
 </html>
+
 
 
 
